prevent for double-tapping buttons on mobile switching to source mode

--- a/styles.css
+++ b/styles.css
@@ -982,6 +982,7 @@ cg-board piece.fading {
 }
 
 .cv-btn {
+  touch-action: manipulation;
   width: 30px;
   height: 30px;
   display: flex;
